--- a/cn.zh-CN/扩展阅读/常见问题/如何使用负载均衡性能保障型实例？.md
+++ b/cn.zh-CN/扩展阅读/常见问题/如何使用负载均衡性能保障型实例？.md
@@ -10,7 +10,7 @@
 
 把鼠标移至性能保障型实例的绿色图标，可查看具体的性能指标，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693277_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703277_zh-CN.png)
 
 性能保障型实例的三个关键指标如下：
 
@@ -29,8 +29,8 @@
 
 阿里云负载均衡性能保障型实例开放了如下六种实例规格（各地域因资源情况不同，开放的规格可能略有差异，请以控制台购买页为准）。
 
-|规格|规格|最大连接数|每秒新建连接数 \(CPS\)|每秒查询数\(QPS\)|
-|:-|:-|:----|:--------------|:-----------|
+|规格规格|最大连接数|每秒新建连接数 \(CPS\)|每秒查询数\(QPS\)|
+|:---|:----|:--------------|:-----------|
 |规格 1|简约型I \(slb.s1.small\)|5,000|3,000|1,000|
 |规格 2|标准型I \(slb.s2.small\)|50,000|5,000|5,000|
 |规格 3|标准型II \(slb.s2.medium\)|100,000|10,000|10,000|
@@ -56,7 +56,7 @@
 
 -   按量付费模式
 
-    性能保障型实例规格费按使用量收取，即不论您选择的何种规格，实例规格规格费均会按照您实际使用的规格收取。
+    性能保障型实例规格费按使用量收取，即不论您选择的何种规格，实例规格费均会按照您实际使用的规格收取。
 
     例如，您选择了超强型I \(slb.s3.large\)规格（最大连接数1,000,000；CPS 500,000；QPS 500,00）。您的实例在某个小时内各项指标产生的实际峰值如下：
 
@@ -72,14 +72,14 @@
 
     以后每小时规格费均按照上述方式计算，如下图所示：
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693280_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703280_zh-CN.png)
 
     因此，按量付费的性能保障型实例具有自动弹性伸缩（或计费）的能力。您在购买时所选的规格，是性能的上限，比如您选择高阶型II \(slb.s3.medium\)，那么意味着，您的实例最大可以达到的规格上限就是高阶型II \(slb.s3.medium\)。
 
 
 ## 3. 性能保障型实例规格费的定价 {#section_n5z_s1n_vdb .section}
 
-下表中所列的只是规格费用。除规格费以外，负载均衡实例的实例配费和流量/带宽费正常收取。更多详细信息，参考[计费说明](../intl.zh-CN/产品定价/按量计费.md#)。
+下表中所列的只是规格费用。除规格费以外，负载均衡实例的实例配费和流量/带宽费正常收取。更多详细信息，参考[按量计费](../intl.zh-CN/产品定价/按量计费.md#)。
 
 |地域|规格|规格|最大连接数|每秒新建连接数 \(CPS\)|每秒查询数\(QPS\)|包年包月\(元/月\)|按量付费\(元/时\)|
 |:-|:-|:-|:----|:--------------|:-----------|:----------|:----------|
@@ -136,24 +136,24 @@
 
         并发连接数监控示例
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693281_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703281_zh-CN.png)
 
         新建连接数监控示例
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693282_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703282_zh-CN.png)
 
         QPS监控示例
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693283_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703283_zh-CN.png)
 
 
 ## 5. 是否可以调整性能保障型实例的规格？ {#section_dmb_q2n_vdb .section}
 
 您可在控制台对性能保障型实例进行变配，如下图所示。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887693284_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703284_zh-CN.png)
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887703287_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703287_zh-CN.png)
 
 按量付费的性能保障型实例的规格可以升配也可以降配。
 
@@ -166,7 +166,7 @@
 -   由于历史存量原因，部分实例可能存在于较老的集群。此部分实例在变配到性能保障型实例时，因为需要将实例迁移，因此可能出现10-30秒的业务中断，其他变配操作均不会影响业务。因此建议在业务低谷期进行此类变配，或通过[GSLB](https://promotion.aliyun.com/ntms/act/globalslb.html?spm=5176.71615.741495.1.307291894icRpB&wh_ttid=pc)来做实例间的负载均衡后，再进行变配。
 -   所有的变配操作都不影响负载均衡实例的IP地址。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15439887703288_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4163/15441762703288_zh-CN.png)
 
 ## 6. 性能保障型实例何时收费？ {#section_gvt_kfn_vdb .section}
 
