--- a/cn.zh-CN/用户指南/多可用区.md
+++ b/cn.zh-CN/用户指南/多可用区.md
@@ -14,9 +14,9 @@
 -   正常情况下，备可用区的SLB实例处于待机状态。您不可以手动切换SLB实例的主备工作状态，只有当阿里云检测到整个可用区不可用时如如机房整体断电、机房出口光缆中断等，负载均衡才会切换到备可用区。而并非某个实例出现故障，就切换到备可用区。
 -   SLB和ECS是不同的集群。可用区A的SLB不可用时，ECS并不一定不可用，因此如果仅因为SLB集群故障导致的SLB主备倒换，备可用区的SLB依然可以将流量分发至不同可用区的ECS。但当整个可用区的所有集群断电或光缆中断时，那么可用区的所有服务（包括但不限于SLB、ECS等）就都无法正常工作了。
 
-更多信息，参见[负载均衡高可用最佳实践](../intl.zh-CN/扩展阅读/最佳实践/高可用最佳实践.md#)。
+更多信息，参见[负载均衡高可用最佳实践](../intl.zh-CN/产品简介/高可用介绍.md#)。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4155/15428534592835_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/4155/15450274252835_zh-CN.png)
 
 ## 主备可用区列表 {#section_ml2_ykb_wdb .section}
 
@@ -24,47 +24,100 @@
 
 |地域|可用区类型|可用区|
 |:-|:----|:--|
-|华东1|多可用区|**主可用区**|**备可用区**|
-|可用区B|可用区D|
+|华东1（杭州）|多可用区|**主可用区**|**可选备可用区**|
+|可用区B|可用区D可用区G
+
+|
 |可用区D|可用区E|
-|可用区E|可用区F|
+|可用区E|可用区D可用区F
+
+|
 |可用区F|可用区E|
-|华东2|多可用区|**主可用区**|**备可用区**|
+|可用区G|可用区B可用区H
+
+|
+|可用区H|可用区G|
+|华东2（上海）|多可用区|**主可用区**|**可选备可用区**|
 |可用区A|可用区B|
-|可用区B|可用区A或可用区D|
+|可用区B|可用区A可用区C
+
+可用区D
+
+|
 |可用区C|可用区B|
-|可用区D|可用区B|
-|华南1|多可用区|**主可用区**|**备可用区**|
+|可用区D|可用区B可用区E
+
+|
+|可用区E|可用区D可用区F
+
+|
+|可用区F|可用区E|
+|华南1（深圳）|多可用区|**主可用区**|**可选备可用区**|
 |可用区A|可用区B|
-|可用区B|可用区A|
-|可用区C|可用区B|
-|华北1|多可用区|**主可用区**|**备可用区**|
+|可用区B|可用区A可用区C
+
+|
+|可用区C|可用区B可用区D
+
+|
+|可用区D|可用区C可用区E
+
+|
+|可用区E|可用区D|
+|华北1（青岛）|多可用区|**主可用区**|**可选备可用区**|
 |可用区B|可用区C|
 |可用区C|可用区B|
-|华北2|多可用区|**主可用区**|**备可用区**|
-|可用区A|可用区B或可用区D|
-|可用区B|可用区A或可用区C|
-|可用区C|可用区B|
+|华北2（北京）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B可用区D
+
+可用区E
+
+|
+|可用区B|可用区C|
+|可用区C|可用区E|
 |可用区D|可用区A|
-|华北3|单可用区|可用区A|可用区A|
-|华北5|单可用区|可用区A|可用区A|
-|欧洲中部1|多可用区|**主可用区**|**备可用区**|
+|可用区E|可用区C可用区F
+
+|
+|可用区F|可用区E可用区G
+
+|
+|可用区G|可用区F|
+|华北3（张家口）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B|
 |可用区B|可用区A|
-|英国|多可用区|**主可用区**|**备可用区**|
+|华北5（呼和浩特）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B|
+|可用区B|可用区A|
+|欧洲中部1（法兰克福）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B|
+|可用区B|可用区A|
+|英国（伦敦）|多可用区|**主可用区**|**可选备可用区**|
 |可用区A|可用区A|
 |可用区B|可用区B|
-|中东东部1|单可用区|可用区A|可用区A|
-|新加坡|多可用区|**主可用区**|**备可用区**|
+|中东东部1（迪拜）|单可用区|可用区A|
+|亚太东南1（新加坡）|多可用区|**主可用区**|**可选备可用区**|
 |可用区A|可用区B|
 |可用区B|可用区A|
-|亚太东南2|单可用区|可用区A|可用区A|
-|亚太东南3|单可用区|可用区A|可用区A|
-|亚太东北1|单可用区|可用区A|可用区A|
-|香港|多可用区|**主可用区**|**备可用区**|
+|可用区C|可用区B|
+|亚太东南2（悉尼）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B|
+|可用区B|可用区A|
+|亚太东南3（吉隆坡）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B|
+|可用区B|可用区A|
+|亚太东南5（雅加达）|单可用区|可用区A|
+|亚太南部1（孟买）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B|
+|可用区B|可用区A|
+|亚太东北1（东京）|单可用区|可用区A|
+|香港|多可用区|**主可用区**|**可选备可用区**|
 |可用区B|可用区C|
 |可用区C|可用区B|
-|美东1|单可用区|可用区A|可用区A|
-|美西1|多可用区|**主可用区**|**备可用区**|
+|美东1（弗吉利亚）|多可用区|**主可用区**|**可选备可用区**|
+|可用区A|可用区B|
+|可用区B|可用区A|
+|美西1（硅谷）|多可用区|**主可用区**|**可选备可用区**|
 |可用区A|可用区B|
 |可用区B|可用区A|
 
